Bug 369228 - [wayland] plasmashell crashes when moving panel from one screen to another
Summary: [wayland] plasmashell crashes when moving panel from one screen to another
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-wayland (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-23 09:25 UTC by Bhushan Shah
Modified: 2016-10-07 02:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bhushan Shah 2016-09-23 09:25:29 UTC
Plasmashell crashes when moving panel from one screen to another in wayland session

Folowing is the backtrace..

Thread 1 (Thread 0x7ffff7eee680 (LWP 810)):
#0  0x00007ffff482e937 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQt5Qml.so.5
#1  0x00007ffff482ea16 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQt5Qml.so.5
#2  0x00007ffff480a9c1 in ?? () from /usr/lib/libQt5Qml.so.5
#3  0x00007ffff480b0f2 in QV4::QObjectWrapper::getProperty(QV4::ExecutionEngine*, QObject*, QQmlPropertyData*, bool) () from /usr/lib/libQt5Qml.so.5
#4  0x00007ffff480ba7c in QV4::QObjectWrapper::getQmlProperty(QQmlContextData*, QV4::String*, QV4::QObjectWrapper::RevisionMode, bool*, bool) const () from /usr/lib/libQt5Qml.so.5
#5  0x00007ffff480fb2c in QV4::QObjectWrapper::getQmlProperty(QV4::ExecutionEngine*, QQmlContextData*, QObject*, QV4::String*, QV4::QObjectWrapper::RevisionMode, bool*) ()
   from /usr/lib/libQt5Qml.so.5
#6  0x00007ffff48b6ab7 in QV4::QmlContextWrapper::get(QV4::Managed const*, QV4::String*, bool*) () from /usr/lib/libQt5Qml.so.5
#7  0x00007ffff4794d65 in QV4::ExecutionContext::getProperty(QV4::String*) () from /usr/lib/libQt5Qml.so.5
#8  0x00007ffff48221e0 in QV4::Runtime::getActivationProperty(QV4::ExecutionEngine*, int) () from /usr/lib/libQt5Qml.so.5
#9  0x00007fff40007139 in ?? ()
#10 0x0000000000000000 in ?? ()
#0  0x00007ffff0b74520 in QScreen::size() const () from /usr/lib/libQt5Gui.so.5
#1  0x000000000043640e in PanelView::resizePanel (this=0x11ae830) at /home/bshah/kdesrc/source/plasma-workspace/shell/panelview.cpp:470
#2  0x000000000043668a in PanelView::setLength (this=0x11ae830, value=4372) at /home/bshah/kdesrc/source/plasma-workspace/shell/panelview.cpp:230
#3  0x000000000043aa30 in PanelView::qt_static_metacall (_o=0x11ae830, _c=QMetaObject::WriteProperty, _id=3, _a=0x7fffffff3600) at /home/bshah/kdesrc/build/plasma-workspace/shell/moc_panelview.cpp:360
#4  0x000000000043ad29 in PanelView::qt_metacall (this=0x11ae830, _c=QMetaObject::WriteProperty, _id=3, _a=0x7fffffff3600) at /home/bshah/kdesrc/build/plasma-workspace/shell/moc_panelview.cpp:414
#5  0x00007ffff484348c in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/libQt5Qml.so.5
#6  0x00007ffff4845043 in QQmlPropertyPrivate::writeValueProperty(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/libQt5Qml.so.5
#7  0x00007ffff484521b in QQmlProperty::write(QVariant const&) const () from /usr/lib/libQt5Qml.so.5
#8  0x00007ffff4911b8d in ?? () from /usr/lib/libQt5Qml.so.5
#9  0x00007ffff4911ce3 in ?? () from /usr/lib/libQt5Qml.so.5
#10 0x00007ffff4843832 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/libQt5Qml.so.5
#11 0x00007ffff4845043 in QQmlPropertyPrivate::writeValueProperty(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/libQt5Qml.so.5
#12 0x00007ffff48b279c in QQmlBinding::write(QQmlPropertyData const&, QV4::Value const&, bool, QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/libQt5Qml.so.5
#13 0x00007ffff48b38e5 in QQmlBinding::update(QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/libQt5Qml.so.5
#14 0x00007ffff48b422e in QQmlBinding::refresh() () from /usr/lib/libQt5Qml.so.5
#15 0x00007ffff4889044 in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () from /usr/lib/libQt5Qml.so.5
#16 0x00007ffff483319c in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () from /usr/lib/libQt5Qml.so.5
#17 0x00007ffff0628c0c in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#18 0x00007fff4628850b in ?? () from /usr/lib/qt/qml/QtQuick/Layouts/libqquicklayoutsplugin.so
#19 0x00007ffff060b2c7 in QMetaProperty::write(QObject*, QVariant const&) const () from /usr/lib/libQt5Core.so.5
#20 0x00007ffff0630c3f in QObject::setProperty(char const*, QVariant const&) () from /usr/lib/libQt5Core.so.5
#21 0x00007ffff7978a1e in PlasmaQuick::AppletQuickItemPrivate::propagateSizeHint (this=0x1277a90, layoutProperty="preferredHeight" = {...}) at /home/bshah/kdesrc/source/plasma-framework/src/plasmaquick/appletquickitem.cpp:174
#22 0x00007ffff7979ce9 in PlasmaQuick::AppletQuickItemPrivate::preferredHeightChanged (this=0x1277a90) at /home/bshah/kdesrc/source/plasma-framework/src/plasmaquick/appletquickitem.cpp:362
#23 0x00007ffff797c697 in PlasmaQuick::AppletQuickItem::qt_static_metacall (_o=0x100b690, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0x7fffffff5990) at /home/bshah/kdesrc/build/plasma-framework/src/plasmaquick/moc_appletquickitem.cpp:180
#24 0x00007ffff06284e9 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#25 0x00007fff4628850b in ?? () from /usr/lib/qt/qml/QtQuick/Layouts/libqquicklayoutsplugin.so
#26 0x00007ffff48b2a75 in QQmlBinding::write(QQmlPropertyData const&, QV4::Value const&, bool, QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/libQt5Qml.so.5
#27 0x00007ffff48b38e5 in QQmlBinding::update(QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/libQt5Qml.so.5
#28 0x00007ffff48b422e in QQmlBinding::refresh() () from /usr/lib/libQt5Qml.so.5
#29 0x00007ffff4889044 in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () from /usr/lib/libQt5Qml.so.5
#30 0x00007ffff483319c in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () from /usr/lib/libQt5Qml.so.5
#31 0x00007ffff0628c0c in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#32 0x00007fff4628850b in ?? () from /usr/lib/qt/qml/QtQuick/Layouts/libqquicklayoutsplugin.so
#33 0x00007ffff48b2a75 in QQmlBinding::write(QQmlPropertyData const&, QV4::Value const&, bool, QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/libQt5Qml.so.5
#34 0x00007ffff48b38e5 in QQmlBinding::update(QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/libQt5Qml.so.5
#35 0x00007ffff48b422e in QQmlBinding::refresh() () from /usr/lib/libQt5Qml.so.5
#36 0x00007ffff4889044 in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () from /usr/lib/libQt5Qml.so.5
#37 0x00007ffff483319c in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () from /usr/lib/libQt5Qml.so.5
#38 0x00007ffff0628c0c in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#39 0x00007fff4628850b in ?? () from /usr/lib/qt/qml/QtQuick/Layouts/libqquicklayoutsplugin.so
#40 0x00007ffff48b2a75 in QQmlBinding::write(QQmlPropertyData const&, QV4::Value const&, bool, QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/libQt5Qml.so.5
#41 0x00007ffff48b38e5 in QQmlBinding::update(QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/libQt5Qml.so.5
#42 0x00007ffff48b422e in QQmlBinding::refresh() () from /usr/lib/libQt5Qml.so.5
#43 0x00007ffff4889044 in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () from /usr/lib/libQt5Qml.so.5
#44 0x00007ffff483319c in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () from /usr/lib/libQt5Qml.so.5
#45 0x00007ffff0628c0c in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#46 0x00007ffff482ee47 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQt5Qml.so.5
#47 0x00007ffff4843832 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/libQt5Qml.so.5
#48 0x00007ffff4810043 in QV4::QObjectWrapper::setProperty(QV4::ExecutionEngine*, QObject*, QQmlPropertyData*, QV4::Value const&) () from /usr/lib/libQt5Qml.so.5
#49 0x00007ffff482695f in QV4::Runtime::setQmlQObjectProperty(QV4::ExecutionEngine*, QV4::Value const&, int, QV4::Value const&) () from /usr/lib/libQt5Qml.so.5
#50 0x00007fff34c11b3d in ?? ()
#51 0x00000000008143f0 in ?? ()
#52 0x00007fff34d60155 in ?? ()
#53 0x0000000000000000 in ?? ()
Comment 1 Marco Martin 2016-09-23 14:10:40 UTC
m_screenToFollow null pointer?
Comment 2 Bhushan Shah 2016-10-07 02:52:44 UTC
Git commit 5cfb957c87994df3cb9c8aa081ad42e67038a7d8 by Bhushan Shah.
Committed on 07/10/2016 at 02:52.
Pushed by bshah into branch 'Plasma/5.8'.

[shell] Fix crash when moving panel between two monitors

Summary:
When moving panel between two screens there is time when panel is on
edge of screen and screenToFollow is null, at this point if any of the
resize or position operation gets triggered, it will attempt to get
screenToFollow's size or geometry and will result in crash as for
sometime screenToFollow is null.

This is quite a timing related bug, if you manage to move panel in time
there would be no crash otherwise there are 3-4 different crashes are
possible.

To solve this we avoid setting null values for screenToFollow, this
should not happen ideally, but setting breakpoint on setScreenToFollow
shows that null value is set from QML and should be investigated.

Test Plan:
moved panel around like crazy, can't reproduce crash on
QScreen::size or QScreen::geometry, without patch it would crash 100%

Reviewers: mart, #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2970

M  +4    -0    shell/panelview.cpp

http://commits.kde.org/plasma-workspace/5cfb957c87994df3cb9c8aa081ad42e67038a7d8